[gd_scene load_steps=11 format=3 uid="uid://4y14qyh1accq"]

[ext_resource type="Script" uid="uid://by6cg8pjfml46" path="res://Scripts/World Elements/Racers/Player.gd" id="1_gymyn"]
[ext_resource type="Texture2D" uid="uid://bvioi2jfn2hmv" path="res://Textures/Racers/Yoshi Back.png" id="2_pu2lt"]
[ext_resource type="Script" uid="uid://jwsfedkwc2mf" path="res://Scripts/KartSFX.gd" id="4_7dp3o"]
[ext_resource type="AudioStream" uid="uid://dao0xo2qdbnow" path="res://Audio/pSE_EG_IDLE_B_AMB.wav" id="5_h4iuc"]
[ext_resource type="AudioStream" uid="uid://bdu3ele2dkq3w" path="res://Audio/pSE_EG_LOOP_B_AMB.wav" id="6_fd4e3"]
[ext_resource type="AudioStream" uid="uid://bjrk28dvey0cv" path="res://Audio/real_drift.wav" id="7_qqcod"]
[ext_resource type="AudioStream" uid="uid://d1awsowjhkwt7" path="res://Audio/boost.wav" id="8_igrcy"]
[ext_resource type="AudioStream" uid="uid://bfxphvr6hykl1" path="res://Audio/spinout.wav" id="9_fs7ks"]
[ext_resource type="AudioStream" uid="uid://ch151vyr1o65" path="res://Audio/collision_thud.wav" id="10_l6n3p"]
[ext_resource type="AudioStream" uid="uid://dr0ab3ogjrbbl" path="res://Audio/offroad_rumble.wav" id="11_olqyp"]

[node name="Player" type="Node2D" node_paths=PackedStringArray("_spriteGFX")]
script = ExtResource("1_gymyn")
NITRO_REFILL_S = 15.0
hud_path = NodePath("../../../RaceHUD")
drift_particle_path = NodePath("Road Type Effects/RightWheelSpecial")
sparks_particle_path = NodePath("Road Type Effects/LeftWheelSpecial")
REAR_BUMP_COOLDOWN_MULT = 5.0
HOP_TEMP_CAP_FACTOR = 0.0
DUST_ON_MULT = 1.0
collision_radius_px = 1.0
nitro_outline_px = 4.0
nitro_chroma_max_px = 6.0
_movementDeaccel = 90.0
STEER_GAIN = 1.0
STEER_CURVE = 1.0
path_ref = NodePath("../../../SubViewport/PathOverlay2D")
pseudo3d_ref = NodePath("../../../Map")
angle_sprite_path = NodePath("GFX")
sheet_uses_mirroring = true
ai_auto_launch = false
ai_launch_delay_s = 0.0
ai_launch_time_s = 0.0
ai_target_speed = 0.0
mult_gravel = 0.75
mult_offroad = 0.55
broadcast_view_to_opponents = true
_spriteGFX = NodePath("GFX")
_mapPosition = Vector3(951, 0, 775)
sprite_graphic_path = NodePath("GFX2/AngleSprite")

[node name="GFX" type="Sprite2D" parent="."]
visible = false
z_index = 4096
z_as_relative = false
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("2_pu2lt")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="GFX2" type="Node" parent="."]

[node name="AngleSprite" type="Sprite2D" parent="GFX2"]
z_index = 4096
texture = ExtResource("2_pu2lt")

[node name="Road Type Effects" type="Node2D" parent="."]

[node name="RightWheel" type="Node2D" parent="Road Type Effects"]
texture_filter = 1
position = Vector2(32, 36)
scale = Vector2(3, 3)

[node name="RightWheelSpecial" type="Node2D" parent="Road Type Effects"]
texture_filter = 1
position = Vector2(75, 56)
scale = Vector2(3, 3)

[node name="LeftWheel" type="Node2D" parent="Road Type Effects"]
texture_filter = 1
position = Vector2(-32, 36)
scale = Vector2(3, 3)

[node name="LeftWheelSpecial" type="Node2D" parent="Road Type Effects"]
texture_filter = 1
position = Vector2(-75, 56)
scale = Vector2(3, 3)

[node name="Audio" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("4_7dp3o")
player = NodePath("..")
idle_stream = ExtResource("5_h4iuc")
mid_stream = ExtResource("6_fd4e3")
high_stream = ExtResource("6_fd4e3")
drift_stream = ExtResource("7_qqcod")
boost_stream = ExtResource("8_igrcy")
spin_stream = ExtResource("9_fs7ks")
collision_stream = ExtResource("10_l6n3p")
offroad_stream = ExtResource("11_olqyp")
hop_stream = ExtResource("8_igrcy")
bump_stream = ExtResource("10_l6n3p")
hop_volume_db = 6.0
bump_volume_db = 6.0
sfx_bus_volume_db = 0.0
engine_start_speed = 1.0
idle_target_db = 0.0
mid_target_db = 0.0
high_target_db = 0.0
drift_target_db = 0.0

[node name="idle_loop" type="AudioStreamPlayer2D" parent="Audio"]

[node name="mid_loop" type="AudioStreamPlayer2D" parent="Audio"]

[node name="high_loop" type="AudioStreamPlayer2D" parent="Audio"]

[node name="drift_loop" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("7_qqcod")

[node name="one_shots" type="AudioStreamPlayer2D" parent="Audio"]
volume_db = 6.0

[node name="offroad_loop" type="AudioStreamPlayer2D" parent="Audio"]

[node name="hop_shot" type="AudioStreamPlayer2D" parent="Audio"]

[node name="bump_shot" type="AudioStreamPlayer2D" parent="Audio"]
